[tests] moved from a launch_test to a rostest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,4 +49,16 @@ install(DIRECTORY config launch
   DESTINATION share/${PROJECT_NAME}
 )
 
+install(
+  PROGRAMS
+    test/translational_command_profile.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(
+  PROGRAMS
+    test/test_translational_smoothing.py
+  DESTINATION share/${PROJECT_NAME}/launch_tests
+)
+
 ament_package()
