--- a/package.xml
+++ b/package.xml
@@ -26,6 +26,10 @@
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rclcpp_components</exec_depend>
 
+  <test_depend>launch_testing</test_depend>
+  <test_depend>launch_testing_ament_cmake</test_depend>
+  <test_depend>launch_testing_ros</test_depend>
+  
   <export>
     <build_type>ament_cmake</build_type>
   </export>
