--- a/config/velocity_smoother_params.yaml
+++ b/config/velocity_smoother_params.yaml
@@ -3,19 +3,21 @@
 # - acceleration limits are just low enough to avoid jerking
 velocity_smoother:
   ros__parameters:
-    # Mandatory parameters
+    # limits
     speed_lim_v: 0.8
     speed_lim_w: 5.4
 
     accel_lim_v: 0.3
     accel_lim_w: 3.5
 
-    # Optional parameters
-    frequency: 20.0
+    # multiply the acceleration limit by this to permit faster decellerations
     decel_factor: 1.0
 
-    # Robot velocity feedback type:
+    # recompute smoothed velocities at this rate
+    frequency: 20.0
+
+    # feedback type:
     #  0 - none
     #  1 - odometry
-    #  2 - robot commands (cmd_vel)
-    robot_feedback: 2
+    #  2 - actual commanded velocity (e.g. after it's been piped through a mux)
+    feedback: 2
