Make velocity_smoother test work with 'colcon test'.
It seems that 'colcon test' has a different execution path
than 'ros2 test', so we can't rely on the launch_ros_node
being available.  Make sure to create our own node, and then
use that for the subscriptions.  This also necessitated a
change in how the checking loop was done.

Signed-off-by: Chris Lalancette <clalancette@openrobotics.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,4 +60,12 @@ install(
   DESTINATION share/${PROJECT_NAME}/launch_test
 )
 
+if(BUILD_TESTING)
+  find_package(launch_testing_ament_cmake REQUIRED)
+  add_launch_test(
+    "test/test_translational_smoothing.py"
+    TIMEOUT 30
+  )
+endif()
+
 ament_package()
