Enable the style checkers, and fix the style to conform.
No functional change.

Signed-off-by: Chris Lalancette <clalancette@openrobotics.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,9 @@ install(
 )
 
 if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+
   find_package(launch_testing_ament_cmake REQUIRED)
   add_launch_test(
     "test/test_translational_smoothing.py"
